admin/service-api.yml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    app: api
    tier: backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
