admin/service-app.yml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app: app
    tier: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
