admin/service-nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  selector:
    app: server
    tier: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
  loadBalancerIP: 35.189.112.8
